feat: add orders implementation and database collection
