# internal/storage_equipment/model_order_item.go
@@ -1,0 +1,35 @@
+/*
+ * Hospital Equipment Management API
+ *
+ * Storage Equipment management for hospital
+ *
+ * API version: 1.0.0
+ * Contact: xskrabakf@stuba.sk
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package storage_equipment
+
+type OrderItem struct {
+
+	// Name of the equipment being ordered
+	EquipmentName string `json:"equipmentName"`
+
+	// Quantity of the equipment requested
+	Quantity int32 `json:"quantity"`
+
+	// Price per unit of the equipment
+	UnitPrice float32 `json:"unitPrice,omitempty"`
+
+	// Total price for this item
+	TotalPrice float32 `json:"totalPrice,omitempty"`
+
+	// Manufacturer of the Equipment
+	Manufacturer string `json:"manufacturer,omitempty"`
+
+	// Serial number of the equipment
+	SerialNumber string `json:"serialNumber,omitempty"`
+
+	// Model of the equipment
+	Model string `json:"model,omitempty"`
+}
