# internal/storage_equipment/model_order_update.go
@@ -1,0 +1,17 @@
+/*
+ * Hospital Equipment Management API
+ *
+ * Storage Equipment management for hospital
+ *
+ * API version: 1.0.0
+ * Contact: xskrabakf@stuba.sk
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package storage_equipment
+
+type OrderUpdate struct {
+
+	// New status for the order
+	Status string `json:"status"`
+}
